# pydepstools

./: LICENCE  README.md  pyproject.toml
src/: calculate-requirements.py  parse-requirements.py
src/pydepstools/: __init__.py  pypiclient.py  pypidata.py  pythonversions.py  screenout.py
test/: test_versioning.py
