[project]
name = "pydepstools"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "grainednoise", email = "grainednoise@gmail.com" }
]
dependencies = [
    "requests>=2.31.0",
    "packaging>=23.2",
    "pytest>=8.0.2",
    "click>=8.1.7",
    "wheel-filename>=1.4.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "pydepstools:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pydepstools"]
